Update SEO work

--- a/Roller_Artical.html
+++ b/Roller_Artical.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog - Sonata Blinds</title>
-  <meta name="title" content="Sonata Blinds | Premium Window Coverings">
-  <meta name="description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds for your home or office.">
+    <link rel="canonical" href="https://www.sonatablinds.com/Roller_Artical.html" />
+    <title>Roller Blinds - Sonata Blinds</title>
+    <meta name="title" content="Sonata Blinds | Premium Roller Blinds for Windows">
+    <meta name="description" content="Explore premium roller blinds with Sonata Blinds. Perfect blend of modern style, light control, and privacy for your home or office.">
+    <meta name="keywords" content="Roller Blinds,Roller Blinds near Noida,Roller Blinds in Adarsh Nagar,Roller Blinds in Delhi">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="revisit-after" content="1 day">
+    <meta name="language" content="English">
+
+
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
