--- a/Wooden_Artical.html
+++ b/Wooden_Artical.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://www.sonatablinds.com/Wooden_Artical.html" />
+    <title>Wooden Blinds - Sonata Blinds</title>
     <meta name="title" content="Wooden Blinds | Elegant & Durable Window Coverings by Sonata Blinds">
     <meta name="description" content="Enhance your interiors with handcrafted wooden blinds from Sonata Blinds. Perfect balance of natural beauty, privacy, and light control for homes and offices.">
     <meta name="keywords" content="Wooden Blinds,Wooden Blinds near Noida,Wooden Blinds in Adarsh Nagar,Wooden Blinds in Delhi">
