--- a/Zebra_Article.html
+++ b/Zebra_Article.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Zebra Blinds | Stylish & Versatile Light Control by Sonata Blinds">
-    <meta name="description" content="Upgrade your interiors with modern zebra blinds from Sonata Blinds. Enjoy stylish light filtering, privacy, and UV protection—perfect for both homes and offices.">
-    <meta name="keywords" content="Zebra Blinds,Zebra Blinds near Noida,Zebra Blinds in Adarsh Nagar,Zebra Blinds in Delhi,Stylish Window Blinds,Light Filtering Blinds">
-
+    <link rel="canonical" href="https://www.sonatablinds.com/blog.html" />
+    <title>Zebra Blinds - Sonata Blinds</title>
+    <meta name="title" content="Sonata Blinds Blog | Window Blinds Tips, Trends & Guides">
+    <meta name="description" content="Stay updated with the latest window blinds trends, installation tips, product guides, and design inspiration from Sonata Blinds.">
+    <meta name="keywords" content="Blinds Blog,Window Blinds Tips,Zebra Blinds Guide,Roller Blinds Trends,Wooden Blinds Design Ideas,Sonata Blinds Blog,Blinds Near Noida">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="revisit-after" content="1 day">
-    <meta name="description" content="English">
+    <meta name="language" content="English">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.sonatablinds.com/">
