--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://www.sonatablinds.com/blog.html" />
     <title>Blog - Sonata Blinds</title>
-  <meta name="title" content="Sonata Blinds | Premium Window Coverings">
-  <meta name="description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds for your home or office.">
+    <meta name="title" content="Sonata Blinds Blog | Window Blinds Tips, Trends & Guides">
+    <meta name="description" content="Stay updated with the latest window blinds trends, installation tips, product guides, and design inspiration from Sonata Blinds.">
+    <meta name="keywords" content="Blinds Blog,Window Blinds Tips,Zebra Blinds Guide,Roller Blinds Trends,Wooden Blinds Design Ideas,Sonata Blinds Blog,Blinds Near Noida">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="revisit-after" content="1 day">
+    <meta name="language" content="English">
+
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
