--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://www.sonatablinds.com/index.html" />
     <title>Sonata Blinds - Premium Window Covering Solutions</title>
     <meta name="title" content="Sonata Blinds | Premium Window Coverings">
     <meta name="description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds for your home or office.">
-
+    <meta name="keywords" content="Wooden Blinds,Wooden Blinds near Noida,Wooden Blinds in Adarsh Nagar,Wooden Blinds in Delhi">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="revisit-after" content="1 day">
+    <meta name="description" content="English">
 
       <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
