--- a/Blinds_Article.html
+++ b/Blinds_Article.html
@@ -50,8 +50,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <style>
         body {
-      font-family: 'Inter', sans-serif;
-    }
+            font-family: 'Inter', sans-serif;
+        }
         .hero-bg {
             background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1513519245088-0e12902e5a38?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
             background-size: cover;
@@ -88,19 +88,19 @@
       padding: 2rem;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h3 {
-      color: #222;
-      margin-top: 1rem;
-      font-weight: 900;
+    .h3_style {
+      color: #222 !important;
+      margin-top: 1rem !important;
+      font-weight: 900 !important;
     }
     .artical_container img {
       max-width: 100%;
       border-radius: 8px;
       margin-bottom: 1rem;
     }
-    h1 {
-        font-size: 35px;
-        font-weight: 900;
+    .h1_style {
+        font-size: 35px !important;
+        font-weight: 900 !important;
     }
     </style>
 </head>
@@ -139,7 +139,7 @@
     <!-- Hero Banner -->
      
     <article class="artical_container">
-    <h1>The Ultimate Guide to Blinds: Style, Privacy & Functionality for Every Space</h1>
+    <h1 class="h1_style">The Ultimate Guide to Blinds: Style, Privacy & Functionality for Every Space</h1>
 
     <p>When it comes to transforming the look and feel of your space, nothing does it better than <strong>blinds</strong>. From <strong>zebra blinds for windows</strong> to classic <strong>wooden blinds</strong> and <strong>blinds curtains</strong>, the right window covering adds style, controls light, and ensures privacy. Whether you’re looking to revamp your <strong>home</strong>, upgrade your <strong>office</strong>, or explore trendy interiors, this guide covers everything you need to know.</p>
 
@@ -148,19 +148,19 @@
 
     <h2>🌈 Popular Types of Blinds</h2>
 
-    <h3>1. Zebra Blinds</h3>
+    <h3 class="h3_style">1. Zebra Blinds</h3>
     <p>Modern and elegant, <strong>zebra blinds</strong> (also called <strong>zebra blinds curtains</strong>) feature alternating sheer and solid fabric bands that allow for stylish <em>light filtering</em> and <em>UV protection</em>. These are ideal for <strong>blinds for office windows</strong> or modern <strong>homes</strong>.</p>
 
-    <h3>2. Roller Blinds</h3>
+    <h3 class="h3_style">2. Roller Blinds</h3>
     <p><strong>Blinds roller</strong> styles are sleek and functional. Available in various colors and fabrics, these are easy to operate and perfect for minimalistic interiors.</p>
 
-    <h3>3. Roman Blinds</h3>
+    <h3 class="h3_style">3. Roman Blinds</h3>
     <p>Looking for sophistication? <strong>Blinds roman</strong> styles offer soft folds and a fabric-forward design that complements luxurious interiors.</p>
 
-    <h3>4. Wooden Blinds</h3>
+    <h3 class="h3_style">4. Wooden Blinds</h3>
     <p><strong>Blinds wooden</strong> options bring a natural charm. Ideal for <strong>balconies</strong>, <strong>living rooms</strong>, and even <strong>blinds for office</strong> use, they add warmth and depth to any space.</p>
 
-    <h3>5. PVC & Bamboo Blinds</h3>
+    <h3 class="h3_style">5. PVC & Bamboo Blinds</h3>
     <p>Durable and cost-effective, <strong>blinds PVC</strong> and <strong>blinds bamboo</strong> are perfect for humid areas or eco-friendly homes.</p>
 
     <h2>📍 Blinds Near You</h2>
