--- a/blog.html
+++ b/blog.html
@@ -132,7 +132,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-2">Wooden Blinds</h3>
                     <p class="text-gray-600 mb-4">Bring timeless elegance and natural warmth to your interiors with our premium range of Wooden Blinds, proudly manufactured by Sonata Blinds – a trusted name and a leading force in India’s blinds industry.</p>
-                    <a href="/Wooden_Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
+                    <a href="/Wooden-Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
                 </div>
             </div>
 
@@ -142,7 +142,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-2">Roller Blinds</h3>
                     <p class="text-gray-600 mb-4">Discover sleek and modern Sonata Roller Blinds, designed for effortless style and functionality. Ideal for both homes and offices, our roller blinds offer smooth operation, light control, and a wide range of fabrics and finishes. Crafted with quality and precision by one of India’s leading blinds manufacturers.</p>
-                    <a href="/Roller_Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
+                    <a href="/Roller-Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
                 </div>
             </div>
 
@@ -152,7 +152,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-2">The Benefits of Zebra Blinds</h3>
                     <p class="text-gray-600 mb-4">Discover how zebra blinds blend modern design with practical light control and privacy solutions for every space.</p>
-                    <a href="/Zebra_Article.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
+                    <a href="/Zebra-Article.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
                 </div>
             </div>
 
@@ -198,9 +198,9 @@
                     <h4 class="text-lg font-bold mb-4">Our Products</h4>
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Zebra Blinds</a></li>
-                        <li><a href="/Roller_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
+                        <li><a href="/Roller-Artical.html" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Vertical Blinds</a></li>
-                        <li><a href="/Wooden_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
+                        <li><a href="/Wooden-Artical.html" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Motorized Blinds</a></li>
                     </ul>
                 </div>
