--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="revisit-after" content="1 day">
     <meta name="description" content="English">
     <link rel="manifest" href="/images/site.webmanifest">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
